Correcting facet count alignment
[skip ci]

--- a/app/assets/stylesheets/modules/facet_hierarchy.css.scss
+++ b/app/assets/stylesheets/modules/facet_hierarchy.css.scss
@@ -71,6 +71,10 @@
         font-size: 20px;
       }
 
+      .count {
+        top: 0;
+      }
+
       .remove {
         left: -15px;
         top: 0;
